--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "ext-openssl": "*"
     },
     "require-dev": {
-        "filp/whoops": "^2.14.6"
+        "filp/whoops": "^2.14.6",
+        "fakerphp/faker": "2.x-dev"
     }
 }
