--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@babel/preset-react": "^7.18.6",
 		"babel-loader": "^9.1.0",
 		"css-loader": "^6.7.3",
-		"style-loader": "^3.3.1"
+		"style-loader": "^3.3.1",
+		"webpack-cli": "^5.0.1"
 	}
 }
