--- a/package.json
+++ b/package.json
@@ -1,24 +1,33 @@
 {
 	"name": "molly",
 	"version": "1.0.0",
-	"main": "index.js",
-	"repository": "https://github.com/wisusdev/molly.git",
-	"author": "Jesus Avelar <jesus.avelar.nav@gmail.com>",
+	"scripts": {
+		"build": "webpack --config webpack.config.js"
+	},
+	"author": "Jesus Avelar",
 	"license": "MIT",
 	"dependencies": {
 		"axios": "^1.2.1",
-		"bootstrap": "^5.2.3",
 		"jquery": "^3.6.3",
-		"popper": "^1.0.1"
+		"bootstrap": "^5.2.3",
+		"cypress": "^12.2.0",
+		"lodash": "^4.17.21",
+		"popper.js": "^1.16.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.20.7",
-		"@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
-		"@babel/plugin-proposal-optional-chaining": "^7.20.7",
-		"@babel/preset-react": "^7.18.6",
+		"@babel/preset-env": "^7.20.2",
+		"autoprefixer": "^10.4.13",
 		"babel-loader": "^9.1.0",
 		"css-loader": "^6.7.3",
-		"style-loader": "^3.3.1",
+		"css-minimizer-webpack-plugin": "^4.2.2",
+		"cssnano": "^5.1.14",
+		"mini-css-extract-plugin": "^2.7.2",
+		"postcss-loader": "^7.0.2",
+		"sass": "^1.57.1",
+		"sass-loader": "^13.2.0",
+		"ts-loader": "^9.4.2",
+		"webpack": "^5.75.0",
 		"webpack-cli": "^5.0.1"
 	}
 }
